--- a/menu-responsivo/index.html
+++ b/menu-responsivo/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css3/estilo.css">
+
     <title>Menu Responsivo</title>
+
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="container">
+
+            <div class="logo">
+
+                <h1>LOGO</h1>
+
+            </div>
+            <div class="menu-section">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Entregas</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#">Minha Conta</a></li>
+                        
+
+                    </ul>
+                </nav>
+
+
+
+            </div>
+
+        </div>
+
 </body>
+
 </html>
