Ainda estlizando com CSS

--- a/menu-responsivo/index.html
+++ b/menu-responsivo/index.html
@@ -18,17 +18,26 @@
 
             <div class="logo">
 
-                <h1>LOGO</h1>
+                <h1>DEN10 Embalagens</h1>
 
             </div>
             <div class="menu-section">
+                <div class="menu-burguer">
+
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+
+                </div>
+
+
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Shop</a></li>
                         <li><a href="#">Entregas</a></li>
                         <li><a href="#">Contato</a></li>
-                        
+
                     </ul>
                 </nav>
 
